# focusflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: llm.py  router.py  tasks.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  task.py
backend/app/llm/: client.py  prompts.py
backend/app/repositories/: task_repo.py
backend/app/schemas/: common.py  llm.py  task.py
backend/app/services/: llm_service.py  task_service.py
backend/tests/: conftest.py  test_health.py  test_llm_api.py  test_tasks_api.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx
frontend/src/features/app/: useHealth.ts
frontend/src/features/filters/: TaskFilters.tsx
frontend/src/features/i18n/: LanguageSwitcher.tsx
frontend/src/features/llm/: LlmTaskActions.tsx  WorkloadSummary.tsx  api.ts  hooks.ts
frontend/src/features/tasks/: DeleteTaskDialog.tsx  TaskBadge.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  api.ts  hooks.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts  date.ts  useDebounced.ts
frontend/src/test/: setup.ts
frontend/src/types/: llm.ts  task.ts
(+4 files in other folders)
